Version 5.9.15
- Added definitions for PR0-PR7 registers in Spin2

Version 5.9.14
- Added check for limit in ORG and ORGH
- Added warning for incompatible types in comparisons
- Fixed an incorrect optimization across calls
- Fixed dpeek/dpoke definitions in BASIC, and added lpeek/lpoke
- Improved support for 64 bit integers
- Increased default heap size on P2 to 6000 bytes
- Removed some bad debug printfs from sdmm.cc

Version 5.9.13
- Added base 4 and base 8 literals to BASIC
- Added __builtin_movbyts() intrinsic
- Added varargs support to bytecode backends
- Added PEEK, POKE, DPEEK, DPOKE, and VARPTR to BASIC
- Allow looking up static member variables and labels
- Fixed incorrect varargs leaf function optimization
- Fixed precedence of '\' in Spin when used for catching
- Fixed missing downcast when 64 bit arguments are passed to 32 bit parameters
- Fixed operator precedence of long @addr[n] in Spin DAT sections
- Make C const arrays always go into DAT, to save space

Version 5.9.12
- Added LINE INPUT to BASIC
- Added definitions for BUFSIZ and L_tmpnam to stdio.h
- Added FREEFILE function to BASIC
- Added new C intrinsics __builtin_bswap16, __builtin_bswap32, __builtin_parity, __builtin_popcount
- Changed the way C global variables are handled in objects; they used to always be shared between variables, but now can be proper member variables in some circumstances
- Fixed "CLASS USING" file name lookups inside CLASS in BASIC
- Fixed incorrect address calculation when AUGD is needed for CALLPA
- Made clkmode_ and similar symbols accessible in submodules
- Modified SD card code to (I hope) support multiple cards

Version 5.9.11
- Added BOOLEAN keyword to BASIC
- Added some additional optimizations (thanks again, Ada!)
- Added -Wextra flag (ignored for now) to flexcc
- Fixed -gbrk bug which crept in last release
- Fixed some problems parsing C function pointer type declarations
- Fixed some optimizations incorrectly happening to ORG/END assembly