@@ -44,7 +44,7 @@ All of the languages allow inline assembly within functions. There are 3 differe
 
 (1) Plain inline assembly. This is generated by `asm`/`endasm` in Spin and BASIC, and from an `__asm { }` block in C. These blocks run in hubexec mode (for P2) or LMM (for P1) and are optimized by the optimizer.
 
-(2) HUB non-optimized assembly. This is generated by `const asm`/`end asm` in BASIC and `__asm const{}` in C; it is not currently available in Spin. Like plain assembly this runs from HUB, but is not subject to optimization.
+(2) HUB non-optimized assembly. This is generated by `orgh` / `end`in Spin, const asm`/`end asm` in BASIC and `__asm const{}` in C. Like plain assembly this runs from HUB, but is not subject to optimization.
 
 (3) FCACHEd non-optimized assembly. This is generated by `org`/`end` in Spin, `cpu asm`/`end asm` in BASIC, and `__asm volatile{}` in C. This is not subject to optimization, and before execution it is loaded into the FCACHE area, so its timing is based on running from internal memory rather than HUB.
 
