@@ -1,5 +1,6 @@
 Version 5.9.15
 - Added definitions for PR0-PR7 registers in Spin2
+- Added ORGH/END inline assembly in Spin2 for non-optimized hub based inline asm.
 
 Version 5.9.14
 - Added check for limit in ORG and ORGH
